syntax = "proto3";

option csharp_namespace = "Common.Storage.Grpc";

package filestorage;

service FileStorageGrpc {
  rpc UploadFile (stream FileChunk) returns (UploadFileResponse);
  
  rpc ConfirmFile (ConfirmFileRequest) returns (ConfirmFileResponse);
  
  rpc ConfirmFilesBatch (ConfirmFilesBatchRequest) returns (ConfirmFilesBatchResponse);
  
  rpc UploadAndConfirm (stream FileChunk) returns (ConfirmFileResponse);
  
  rpc GetFileMetadata (GetFileRequest) returns (FileMetadataResponse);
  
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
}

message FileChunk {
  oneof data {
    FileMetadataRequest metadata = 1; 
    bytes content = 2;                 
  }
}

message FileMetadataRequest {
  string file_name = 1;
  string content_type = 2;
  string entity_type = 3;
  string entity_id = 4;
  string uploaded_by = 5;
  bool auto_confirm = 6; 
}


message UploadFileResponse {
  bool success = 1;
  string file_id = 2;
  string file_name = 3;
  int64 size = 4;
  string error = 5;
  string temp_path = 6;
}

message ConfirmFileRequest {
  string file_id = 1;
  string entity_type = 2;
  string entity_id = 3;
}

message ConfirmFileResponse {
  bool success = 1;
  string file_id = 2;
  string file_name = 3;
  string url = 4;
  string path = 5;
  int64 size = 6;
  string error = 7;
}

message GetFileRequest {
  string file_id = 1;
}

message FileMetadataResponse {
  bool success = 1;
  string file_id = 2;
  string file_name = 3;
  string content_type = 4;
  int64 size = 5;
  string url = 6;
  string path = 7;
  int32 status = 8;  
  string entity_type = 9;
  string entity_id = 10;
  string error = 11;
}

message DeleteFileRequest {
  string file_id = 1;
}

message DeleteFileResponse {
  bool success = 1;
  string error = 2;
}


message ConfirmFilesBatchRequest {
  repeated ConfirmFileRequest files = 1;
}

message ConfirmFilesBatchResponse {
  bool success = 1;
  repeated ConfirmFileResponse results = 2;
  string error = 3;
}
